# PRadSim

./: .gitignore  CMakeCache.txt  CMakeLists.txt  G4History.macro  Makefile  PRadSim  PRadSim.cc  README.md  cmake_install.cmake  currentEvent.rndm  currentRun.rndm  gui.mac  init_vis.mac  run.mac  run1.mac  run2.mac  vis.mac
GramolinRC/ESEPPv1.4/: Makefile  dialog.h  esepp  esepp.h  events_e+.root  events_e-.root  interference.h
GramolinRC/moller/: Makefile  Makefile.arch  moller  moller.cxx
aao_rad/: aao.F  aao_input.inp  aao_rad.F  aao_rad.hbook  aao_rad.hboop  bcs.inc  cgln_amps.F  daresbury.F  interp.F  legendre.F  maid_lee.F  mc.inc  pi0eta.par  sconstruct  sigmao.F  splie2.F  splin2.F  spp.inc  strlen.F  unixtime.c  xsection.F
aao_rad/input/: dvmp.inp  eta_dvmp_v3.inp
config/: calibration.txt  data_file.txt  hycal.conf  hycal_cluster.conf  leadglass_map.txt  module_list.txt
database/: hycal_module.txt  hycal_module_shuffle.py  pwo_attenuation.py
digi/: CMakeLists.txt  ConfigParser.cc  Digitization.cc  Digitization.hh  HyCalParameterisation.cc  PRadClusterProfile.cc  PRadClusterProfile.hh  PRadDig.cc
digi/include/: ConfigObject.h  ConfigParser.h  ConfigValue.h  HyCalDigitization.hh  PRadDigitization.hh  StandardDigiBase.hh
digi/src/: ConfigObject.cpp  ConfigParser.cpp  ConfigValue.cpp  HyCalDigitization.cc  PRadDigitization.cc  StandardDigiBase.cc
digitization/: CMakeLists.txt  PRadDig.cc  PRadRec.cc
digitization/include/: HyCalDigitization.hh  PRadDigitization.hh  StandardDigiBase.hh
digitization/src/: HyCalDigitization.cc  PRadDigitization.cc  StandardDigiBase.cc
evgen/aao/: aao-pi0-1.6.inp  aao-pi0-2.4.inp  aao_rad.out  amaid-pi0-1.5.inp  amaid-pi0-1.6.inp  amaid-pi0-2.4.inp  dsigma.F  dvmpw.F  dvmpx.F  helicity_amps.F  input.inp  mpintp.inc  multipole_amps.F  names.inc  read_sf_file.F  sconscript  spline.F  splint.F
evgen/aao/input/: dvmp_v3.inp
evgen/eds/: Makefile  Makefile.arch  eds.cxx
evgen/esepp/: const.h  esepp.cxx  esepp.h  proton.h
evgen/mitee/: LoopCorrections.hh  MSqBrem.hh  moller.cc  moller.hh
evgen/moller/: moller.cxx
evgen/newee/: Makefile  merad_const.inc  merad_fsir.f  merad_gr.inc  merad_grid.inc  merad_tv.inc  merad_util.f  moller.cc  moller.hh
evgen/newep/: Makefile  const.inc  elasticep.cc  elrad_const.inc  elrad_fsig.f  elrad_grid.inc  elrad_par.inc  elrad_util.f  elradgen.f  grid.inc  lepton.h  newep.cc  newep.hh  output.inc  par.inc  pol.inc  test.inc
evgen/norc/: Makefile  ed.h  ed.hh  ee.h  ee.hh  ep.h  ep.hh  norc.cc  norc.cxx
evgen/qeled/: Makefile  qeled.cc
evgen/qesed/: Makefile  README
evio/include/: evioBankIndex.hxx  evioBufferChannel.hxx  evioDictionary.hxx  evioETChannel.hxx  evioFileChannel.hxx  evioSocketChannel.hxx
evio/tools/: evConverter.c
include/: ActionInitialization.hh  CalorimeterHit.hh  CalorimeterParameterisation.hh  CalorimeterSD.hh  CheckScatteringSD.hh  ConfigParser.h  ConfigParser.hh  DetectorConstruction.hh  DetectorMessenger.hh  Digitization.h  Digitization.hh  EventAction.hh  EventActionMessenger.hh  EventMessenger.hh  GasElectronMultiplierSD.hh  GenEvent.hh  GlobalVars.hh  Globals.hh  HyCalParameterisation.hh  LeadGlassPartParameterisation.hh  PRadClusterProfile.hh  PhysListEmModified.hh  PhysListEmStandard.hh  PhysListPureEm.hh  PhysicsList.hh  PhysicsListMessenger.hh  PrimaryGenerator.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RootTree.hh  RunAction.hh  StandardDetectorSD.hh  StandardHit.hh  StepMax.hh  StepMaxMessenger.hh  StepRecordSD.hh  SteppingAction.hh  SteppingVerbose.hh  TrackInformation.hh  TrackingAction.hh  (+3 more)
output/: file.output  readme.output
reconstruction/: BGanalysis.C  Eventviewer.C  GEManalysis.C  GNUmakefile  ReconstructionAnalysis.C  posrecon  posrecon.cpp  posrecon.h
src/: ActionInitialization.cc  CalorimeterHit.cc  CalorimeterParameterisation.cc  CalorimeterSD.cc  CheckScatteringSD.cc  ConfigObject.cpp  ConfigParser.cpp  DetectorConstruction.cc  DetectorMessenger.cc  Digitization.cc  EventAction.cc  EventActionMessenger.cc  EventMessenger.cc  GasElectronMultiplierSD.cc  HyCalParameterisation.cc  LeadGlassPartParameterisation.cc  PRadClusterProfile.cc  PhysListEmModified.cc  PhysListEmStandard.cc  PhysListPureEm.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGenerator.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RootTree.cc  RunAction.cc  StandardDetectorSD.cc  StandardHit.cc  StepMax.cc  StepMaxMessenger.cc  StepRecordSD.cc  SteppingAction.cc  SteppingVerbose.cc  TrackInformation.cc  TrackingAction.cc  TrackingDetectorSD.cc  TrackingMessenger.cc  VirtualDetectorSD.cc  test.txt
